# VMAS-code

./: .gitignore  CMakeLists.txt  README.md
cgogn/core/: CMakeLists.txt
cgogn/core/apps/: CMakeLists.txt
cgogn/core/types/maps/gmap/: gmap0.h
cgogn/core/ui_modules/: mesh_provider.h
cgogn/geometry/: CMakeLists.txt
cgogn/geometry/apps/: CMakeLists.txt  vmas.cpp
cgogn/geometry/ui_modules/: vmas.h
cgogn/io/: CMakeLists.txt  cgogn_ioConfig.cmake.in
cgogn/io/apps/: CMakeLists.txt
cgogn/modeling/: CMakeLists.txt
cgogn/modeling/algos/remeshing/: qmorph.h
cgogn/modeling/apps/: CMakeLists.txt
cgogn/rendering/: CMakeLists.txt  skelshape.cpp  skelshape.h
cgogn/rendering/apps/: CMakeLists.txt
data/: armadillo.off  bear.off  dolphin.off  dove.off  elk.off  fertility.off  neptune.off  octpus.off  pig.off  pinion.off  plane.off  santa.off  seahorse.off  spider.off  spot.off  vessel.off
